--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,23 @@ body {
     background-image: linear-gradient(red, gold, green);
 }
 
-h1 {
+h1, h2, h3, p {
     color: black;
+    text-align: center;
 }
 
 img {
     width: 500px;
     height: 400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: solid 5px black;
 }
 
 ul, li {
     color: black;
+    text-align: center;
 }
 
 body {
